--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,15 @@ canvas {
     display: block;
 }
 
+#sketch {
+    position: fixed;
+    top: 0;
+    left: 0;
+    max-width: 100vw;
+    max-height: 100vh;
+    z-index: -1;
+}
+
 @import url("https://use.typekit.net/hyn4cgn.css");
 
 :root {
@@ -25,8 +34,8 @@ html,
 body {
     font-family: nunito, sans-serif;
     font-weight: 200;
-    font-style: normal;
-    color: rgb(var(--white));
+    font-size: 30px;
+    color: rgb(var(--grey));
 }
 
 section {
@@ -35,7 +44,7 @@ section {
 }
 
 section:nth-child(even) {
-    background-color: rgb(15, 76, 129);
+    background-color: rgba(15, 76, 129, 0.7);
     color: rgb(var(--white));
 }
 
@@ -72,19 +81,27 @@ section:nth-child(even) {
     background-position: center;
 
     position: relative;
+
+    opacity: 0.9;
 }
 
 .top-layer:hover {
-    transform: scale(1.2);
+    transform: scale(0.9);
+    opacity: 1;
+    border: 1rem solid black;
+}
+
+.top-layer, .top-layer:hover {
+    transition: all 0.25s ease-out;
 }
 
 .top-layer:nth-child(1) {
     background-image: url('../images/darkommute.png');
-    filter: invert();
 }
 
 .top-layer:nth-child(2){
     background-image: url('../images/downtrees.jpg');
+    filter: invert();
 }
 
 .top-layer:nth-child(3) {
@@ -117,8 +134,10 @@ section:nth-child(even) {
 }
 
 .greeting {
+    width: calc(50% - 2rem);
     background-color: rgb(200, 101, 8);
     padding: 2rem;
+    margin-left: 2rem;
 }
 
 /* Scroller */
